Added Welcome and How to use website information on home template, css to searchbox

--- a/templates/jokes.html
+++ b/templates/jokes.html
@@ -1,16 +1,59 @@
 {% extends "base.html" %}
 {% block content %}
 
+
+    <!--Intro/About-->
+    <div class="card z-depth-0">
+        <div class="card-header activator">
+            <span><h3 class="center-align teal-text">Welcome to Laugh Out Loud!</h3></span> 
+        </div>
+        <div class="card-content">
+            <span class="card-title activator center-align teal-text">
+                A place where you can lighten up with laughter<i class="small material-icons">play_circle_outline</i>
+            </span>
+        </div>
+        <div class="card-reveal">
+            <span class="card-title teal-text text-darken-3">How to use this website!<i class="material-icons teal-text right">close</i></span>
+            <p class="teal-text text-darken-2">
+                Here on the homepage is the Joke Bank where all jokes are displayed.<br>
+                You can choose to like and dislike them by clicking on the face icons.<br>
+                Search for jokes with keywords, eg. coconut.<br>
+                Read jokes from different categories listed on the side panel.<br>
+                Once you're a registered user you can submit, edit and delete your own hilarious jokes.<br>
+                You can also bookmark other people's jokes and see 
+                them on your collection page too.<br>
+                Click on Register and then Log In on the navbar above.<br>
+                Hope you enjoy it!
+            </p>
+        </div>
+    </div>
+        
+    
+        <!--<div class="row">
+            <div class="col s12">
+                <div class="card-panel z-depth-0">
+                    <span class="teal-text center-align"><h3>Welcome to Laugh Out Loud!</h3>
+                        <h4>A place where you can lighten up with laughter.</h4><br>
+                        <h5 class="teal-text text-darken-3">Here on the homepage is the Joke Bank where all jokes are displayed, 
+                            you can choose to like and dislike them, search for jokes with keywords and read jokes from different 
+                            categories listed on the side panel. Click on Register and Log In on the navbar above to submit, edit 
+                            and delete your own hilarious jokes. You can even bookmark other people's jokes and see them on your 
+                            collection page too.</h5> 
+                    </span>
+                </div>
+            </div>
+        </div>-->
+
     <!--Search-->
-        <div class="row card-panel amber lighten-5">
+        <div class="row">
             <form action="{{ url_for('search') }}" method="POST" class="col s12">
                 <div class="row valign-wrapper center-align">
-                    <div class="input-field col s12">
+                    <div class="input-field col s12 m6 l6 push-l1">
                         <i class="fas fa-search prefix light-blue-text text-darken-4" id="fa-search"></i>
                         <input type="text" name="query" id="query" minlength="3" class="validate" required>
-                        <label for="query" id="searchbox">Search Jokes</label>
+                        <label for="query" id="searchbox">Search jokes with keywords</label>
                     </div>
-                    <div class="col s12 m10">
+                    <div class="col s12 m4 pull-m1 l8">
                         <a href="{{ url_for('get_jokes') }}" class="search-btns red btn text-shadow">
                             Reset
                         </a>
