Added Materialize CSS to all relevant templates, changed log in redirect url to homepage

--- a/templates/jokes.html
+++ b/templates/jokes.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-    <!--Intro/About-->
+    <!--Welcome and How to use website-->
     <div class="card z-depth-0">
         <div class="card-header activator">
             <span><h3 class="center-align teal-text">Welcome to Laugh Out Loud!</h3></span> 
@@ -19,30 +19,13 @@
                 You can choose to like and dislike them by clicking on the face icons.<br>
                 Search for jokes with keywords, eg. coconut.<br>
                 Read jokes from different categories listed on the side panel.<br>
-                Once you're a registered user you can submit, edit and delete your own hilarious jokes.<br>
-                You can also bookmark other people's jokes and see 
-                them on your collection page too.<br>
+                Once you're a registered user you can submit, edit and delete your own hilarious jokes on the homepage.<br>
+                You can also bookmark other people's jokes and see them on your collection page too.<br>
                 Click on Register and then Log In on the navbar above.<br>
                 Hope you enjoy it!
             </p>
         </div>
     </div>
-        
-    
-        <!--<div class="row">
-            <div class="col s12">
-                <div class="card-panel z-depth-0">
-                    <span class="teal-text center-align"><h3>Welcome to Laugh Out Loud!</h3>
-                        <h4>A place where you can lighten up with laughter.</h4><br>
-                        <h5 class="teal-text text-darken-3">Here on the homepage is the Joke Bank where all jokes are displayed, 
-                            you can choose to like and dislike them, search for jokes with keywords and read jokes from different 
-                            categories listed on the side panel. Click on Register and Log In on the navbar above to submit, edit 
-                            and delete your own hilarious jokes. You can even bookmark other people's jokes and see them on your 
-                            collection page too.</h5> 
-                    </span>
-                </div>
-            </div>
-        </div>-->
 
     <!--Search-->
         <div class="row">
@@ -65,7 +48,7 @@
             </form>
         </div>  
         <div class="s9 teal-text text-darken-2 center-align">
-            <h3>Joke Bank</h3>
+            <h3>Joke Bank!</h3>
         </div>  
         <div class="row section">
         <!--Joke category panel-->
