--- a/templates/coll_bookmarks.html
+++ b/templates/coll_bookmarks.html
@@ -3,15 +3,15 @@
 
 
     <!--Search-->
-    <div class="row card-panel amber lighten-5">
+    <div class="row">
         <form action="{{ url_for('search') }}" method="POST" class="col s12">
             <div class="row valign-wrapper center-align">
-                <div class="input-field col s12 m12">
+                <div class="input-field col s12 m6 l6 push-l1">
                     <i class="fas fa-search prefix light-blue-text text-darken-4" id="fa-search"></i>
                     <input type="text" name="query" id="query" minlength="3" class="validate" required>
-                    <label for="query" id="searchbox">Search Jokes</label>
+                    <label for="query" id="searchbox">Search jokes with keywords</label>
                 </div>
-                <div class="col s12">
+                <div class="col s12 m4 pull-m1 l8">
                     <a href="{{ url_for('get_jokes') }}" class="search-btns red btn text-shadow">
                         Reset
                     </a>
@@ -21,7 +21,7 @@
                 </div>
             </div>
         </form>
-    </div>  
+    </div>
     <div class="s9 teal-text text-darken-2 center-align">
             <h3>{{ username }}'s Collection</h3>
         </div> 
