--- a/templates/family_jokes.html
+++ b/templates/family_jokes.html
@@ -3,15 +3,15 @@
 
     
 <!--Search-->
-    <div class="row card-panel amber lighten-5">
+    <div class="row">
         <form action="{{ url_for('search') }}" method="POST" class="col s12">
             <div class="row valign-wrapper center-align">
-                <div class="input-field col s12 m12">
+                <div class="input-field col s12 m6 l6 push-l1">
                     <i class="fas fa-search prefix light-blue-text text-darken-4" id="fa-search"></i>
                     <input type="text" name="query" id="query" minlength="3" class="validate" required>
                     <label for="query" id="searchbox">Search Jokes</label>
                 </div>
-                <div class="col s12 m10">
+                <div class="col s12 m4 pull-m1 l8">
                     <a href="{{ url_for('get_jokes') }}" class="search-btns red btn text-shadow">
                         Reset
                     </a>
@@ -23,7 +23,7 @@
         </form>
     </div>
     <div class="col s9 teal-text text-darken-2 center-align">
-        <h3>Family Jokes</h3>
+        <h3>Family Jokes!</h3>
     </div>
     <div class="row section">
         <!--joke category panel-->
