--- a/templates/word_jokes.html
+++ b/templates/word_jokes.html
@@ -1,16 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <div class="row card-panel amber lighten-5">
+    <!--Search-->
+    <div class="row">
         <form action="{{ url_for('search') }}" method="POST" class="col s12">
             <div class="row valign-wrapper center-align">
-                <div class="input-field col s12">
-                    <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
+                <div class="input-field col s12 m6 l6 push-l1">
+                    <i class="fas fa-search prefix light-blue-text text-darken-4" id="fa-search"></i>
                     <input type="text" name="query" id="query" minlength="3" class="validate" required>
-                    <label for="query" id="searchbox">Search Jokes</label>
+                    <label for="query" id="searchbox">Search jokes with keywords</label>
                 </div>
-                <div class="col s12 m10">
-                    <a href="{{ url_for('get_jokes') }}" class="search-btns red btn text-shadow">Reset</a>
+                <div class="col s12 m4 pull-m1 l8">
+                    <a href="{{ url_for('get_jokes') }}" class="search-btns red btn text-shadow">
+                        Reset
+                    </a>
                     <button type="submit" class="search-btns yellow darken-3 btn text-shadow">
                         Search
                     </button>
@@ -19,7 +22,7 @@
         </form>
     </div>
     <div class="col s9 teal-text text-darken-2 center-align">
-        <h3>Word Play Jokes</h3>
+        <h3>Word Play Jokes!</h3>
     </div>
     <div class="row section">
         <!--Joke category panel-->
