--- a/templates/jokes.html
+++ b/templates/jokes.html
@@ -9,7 +9,7 @@
         </div>
         <div class="card-content">
             <span class="card-title activator center-align teal-text">
-                A place where you can lighten up with laughter<i class="small material-icons">play_circle_outline</i>
+                A place where you can lighten up with laughter! Click here
             </span>
         </div>
         <div class="card-reveal">
