--- a/templates/add_joke.html
+++ b/templates/add_joke.html
@@ -30,7 +30,7 @@
             <div class="input-field col s12">
                 <textarea id="created_by" name="created_by" minlength="5" maxlength="200"
                     class="materialize-textarea validate" required></textarea>
-                <label for="created_by">Credit Joke To:</label>
+                <label for="created_by">Created By: To edit this joke name has to be the same as logged in user</label>
             </div>
         </div>
         <!-- submit button -->
