--- a/templates/edit_joke.html
+++ b/templates/edit_joke.html
@@ -38,7 +38,7 @@
                     class="materialize-textarea validate" required>
                 {{- joke.created_by -}}
                 </textarea>
-                <label for="created_by">Credit Joke To:</label>
+                <label for="created_by">Created By: To edit this joke name has to be the same as logged in user</label>
             </div>
         </div>
         <!-- submit button -->
