--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
                 <div class="col s12">
                     <div class="card">
                         <div class="card-image">
-                            <img src="/static/images/laughter01.jpg">
+                            <img class="responsive-img" src="/static/images/laughter01.jpg">
                         </div>
                     </div>
                 </div>
