--- a/templates/register.html
+++ b/templates/register.html
@@ -10,14 +10,14 @@
                 <div class="row">
 					<div class="input-field col s12">
 						<input id="username" name="username" type="text" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-						<label for="username">Username</label>
+						<label for="username">Username: 5 - 15 letters and/or numbers</label>
 					</div>
                 </div>
                 <!-- passowrd -->
                 <div class="row">
                     <div class="input-field col s12">	
                         <input id="password" name="password" type="password" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
-                        <label for="password">Password</label>
+                        <label for="password">Password: 5 - 15 letters and/or numbers</label>
                     </div>
                 </div>
                 <!-- register -->
