--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,8 @@
 body {
     background-color: #fafafa;
-    font-family: 'Mali', cursive;
-}
+    font-family: 'Mali', cursive; 
+    overflow-x: hidden;
+} 
 
 nav ul a{
     color: #009688;
