Changed message input field 'created by' to specify amount of characters allowed

--- a/templates/add_joke.html
+++ b/templates/add_joke.html
@@ -30,7 +30,7 @@
             <div class="input-field col s12">
                 <textarea id="created_by" name="created_by" minlength="5" maxlength="200"
                     class="materialize-textarea validate" required></textarea>
-                <label for="created_by">Created By: To edit this joke name has to be the same as logged in user</label>
+                <label for="created_by">Created By: Name must be the same as logged in user to be able to edit this joke</label>
             </div>
         </div>
         <!-- submit button -->
