--- a/templates/edit_joke.html
+++ b/templates/edit_joke.html
@@ -38,7 +38,7 @@
                     class="materialize-textarea validate" required>
                 {{- joke.created_by -}}
                 </textarea>
-                <label for="created_by">Created By: Name must be the same as logged in user to be able to edit joke</label>
+                <label for="created_by">Created By: Name must be the same as logged in user to be able to edit this joke</label>
             </div>
         </div>
         <!-- submit button -->
