--- a/templates/base.html
+++ b/templates/base.html
@@ -79,31 +79,35 @@
     {% block content %}
 
     {% endblock %}
-   
     </main>
 </body>
   <!-- Footer -->
-  <footer class="col s12 white grey-text z-depth-2">
-    <div class="row center-align text-shadow-2">
-        <div class="col s12 center-align social-links">
-            <a target="_blank" rel="noopener" href="https://en-gb.facebook.com/">
-                <i class="fab fa-facebook" aria-hidden="true"></i>
-                <span class="sr-only">Facebook</span></a>
-            <a target="_blank" rel="noopener" href="https://twitter.com/login?lang=en-gb">
-                <i class="fab fa-twitter" aria-hidden="true"></i>
-                <span class="sr-only">Twitter</span></a>
-            <a target="_blank" rel="noopener" href="https://www.instagram.com/">
-                <i class="fab fa-instagram" aria-hidden="true"></i>
-                <span class="sr-only">Instagram</span></a>
-            <a target="_blank" rel="noopener" href="https://www.youtube.com/">
-                <i class="fab fa-youtube" aria-hidden="true"></i>
-                <span class="sr-only">YouTube</span></a>
+    <footer class="col s12 white grey-text z-depth-2">
+        <div class="row center-align text-shadow-2">
+            <div class="col s12 center-align social-links">
+                <a target="_blank" rel="noopener" href="https://en-gb.facebook.com/">
+                    <i class="fab fa-facebook" aria-hidden="true"></i>
+                    <span class="sr-only">Facebook</span>
+                </a>
+                <a target="_blank" rel="noopener" href="https://twitter.com/login?lang=en-gb">
+                    <i class="fab fa-twitter" aria-hidden="true"></i>
+                    <span class="sr-only">Twitter</span>
+                </a>
+                <a target="_blank" rel="noopener" href="https://www.instagram.com/">
+                    <i class="fab fa-instagram" aria-hidden="true"></i>
+                    <span class="sr-only">Instagram</span>
+                </a>
+                <a target="_blank" rel="noopener" href="https://www.youtube.com/">
+                    <i class="fab fa-youtube" aria-hidden="true"></i>
+                    <span class="sr-only">YouTube</span>
+                </a>
+            </div>
         </div>
-    </div>
-    <div class="col s12 copyright text-grey center"><strong> &copy; Karen Yuen </strong><span id="copyright"></span></div>
-  </footer>
+        <div class="col s12 copyright text-grey center"><strong> &copy; Karen Yuen </strong><span id="copyright"></span>
+        </div>
+    </footer>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js" 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" 
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js')}}"></script>
@@ -112,5 +116,6 @@
     </script>
     {% block scripts %}
     {% endblock %}
+
 </html>
 
