Changed font colour of flash messages

--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
             {% if messages %}
                 {% for message in messages %}
                     <div class="row flashes s12 m6 offset-3">
-                        <h3 class="center-align">{{ message }}</h3>
+                        <h3 class="center-align pink-text">{{ message }}</h3>
                     </div>
                 {% endfor %}
             {% endif %}
