--- a/templates/jokes.html
+++ b/templates/jokes.html
@@ -5,11 +5,11 @@
     <!--Welcome and How to use website-->
     <div class="card z-depth-0">
         <div class="card-header activator">
-            <span><h3 class="center-align teal-text">Welcome to Laugh Out Loud!</h3></span> 
+            <span><h2 class="center-align teal-text">Welcome to Laugh Out Loud!</h2></span> 
         </div>
         <div class="card-content">
             <span class="card-title activator center-align teal-text">
-                A place where you can lighten up with laughter! LEARN MORE!
+                A place where you can lighten up with laughter! CLICK HERE!
             </span>
         </div>
         <div class="card-reveal">
