Added readme, wireframes, testing images for testing.md and readme.md

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,7 @@ nav ul a{
     width: auto;
     margin: auto;
     color: #009688;
-    background-color: none;
+    background-color: white;
 }
 
 /* Welcome message */
