--- a/templates/jokes.html
+++ b/templates/jokes.html
@@ -5,7 +5,7 @@
     <!--Welcome and How to use website-->
     <div class="card z-depth-0">
         <div class="card-header activator">
-            <span><h2 class="center-align teal-text">Welcome to Laugh Out Loud!</h2></span> 
+            <h2 class="center-align teal-text"><span >Welcome to Laugh Out Loud!</span></h2> 
         </div>
         <div class="card-content">
             <span class="card-title activator center-align teal-text">
