--- a/templates/base.html
+++ b/templates/base.html
@@ -108,7 +108,7 @@
                 </a>
             </div>
         </div>
-        <div class="col s12 copyright text-grey center"><strong> &copy; Karen Yuen </strong><span id="copyright"></span>
+        <div class="col s12 copyright text-grey center"><strong> Site is for educational purposes only <br> &copy; Karen Yuen </strong><span id="copyright"></span>
         </div>
     </footer>
 
