Added a check if user in session and render username in add joke and edit joke function, fixed error with site.webmanifest file by renaming file and documenting bugs in testing.md

--- a/templates/add_joke.html
+++ b/templates/add_joke.html
@@ -22,17 +22,18 @@
         <div class="row">
             <div class="input-field col s12">
                 <textarea id="joke_description" name="joke_description" class="materialize-textarea validate" required></textarea>
-                <label for="joke_description">Joke Description</label>
+                <label for="joke_description">Joke Description:</label>
             </div>
         </div>
-        <!-- credit joke to -->
+        <!-- credit joke to 
         <div class="row">
             <div class="input-field col s12">
+                <input id="created_by" name="created_by" type="text" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                 <textarea id="created_by" name="created_by" minlength="5" maxlength="15"
                     class="materialize-textarea validate" required></textarea>
-                <label for="created_by">Created By: Name must be the same as logged in user to be able to edit this joke</label>
+                <label for="created_by">Created By: TO EDIT/DELETE THIS JOKE, NAME MUST MATCH LOGGED IN USER</label>
             </div>
-        </div>
+        </div>-->
         <!-- submit button -->
         <div class="row">
             <div class="col s12 center-align">
