--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,7 @@
 						<label for="username">Username: 5 - 15 letters and/or numbers</label>
 					</div>
                 </div>
-                <!-- passowrd -->
+                <!-- password -->
                 <div class="row">
                     <div class="input-field col s12">	
                         <input id="password" name="password" type="password" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
