--- a/templates/edit_joke.html
+++ b/templates/edit_joke.html
@@ -31,16 +31,16 @@
                 <label for="joke_description">Joke Description</label>
             </div>
         </div>
-        <!-- credit joke to -->
+        <!-- credit joke to 
         <div class="row">
             <div class="input-field col s12">
                 <textarea id="created_by" name="created_by" minlength="5" maxlength="15"
                     class="materialize-textarea validate" required>
                     {{- joke.created_by -}}
                 </textarea>
-                <label for="created_by">Created By: Name must be the same as logged in user to be able to edit this joke</label>
+                <label for="created_by">Created By: Name must match logged in username to edit joke</label>
             </div>
-        </div>
+        </div>-->
         <!-- submit button -->
         <div class="row">
             <div class="col s12 center-align">
