Added more information on welcome message, added more info in readme and testing files

--- a/templates/jokes.html
+++ b/templates/jokes.html
@@ -17,7 +17,7 @@
             <p class="teal-text text-darken-2">
                 Here on the homepage is the Joke Bank where all jokes are displayed.<br>
                 You can choose to like and dislike them by clicking on the face icons.<br>
-                Search for jokes with keywords, eg. coconut.<br>
+                Search for jokes with keywords, eg. coconut or a username, to quickly find what you want.<br>
                 Read jokes from different categories listed on the side panel.<br>
                 Once you're a registered user you can submit, edit and delete your own hilarious jokes on the homepage.<br>
                 You can also bookmark other people's jokes and see them on your collection page too.<br>
