--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
                 <div class="col s12">
                     <div class="card">
                         <div class="card-image">
-                            <img class="responsive-img" src="/static/images/laughter1.jpg">
+                            <img class="responsive-img" src="/static/images/laughter1.jpg" alt="people laughing">
                         </div>
                     </div>
                 </div>
